--- a/WEB-CW/pages/aboutus.html
+++ b/WEB-CW/pages/aboutus.html
@@ -10,4 +10,20 @@
     <h1>About Us</h1>
     <p>This is a paragraph.</p>
 
+    <ul>
+
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="jobsearch.html">Job Search</a>
+        </li>
+        <li>
+            <a href="unisearch.html">University Search</a>
+        </li>
+        <li>
+            <a href="contactus.html">Contact Us</a>
+        </li>
+    </ul>
+
 </body>
