--- a/WEB-CW/pages/unisearch.html
+++ b/WEB-CW/pages/unisearch.html
@@ -2,12 +2,29 @@
 <html>
 
 <head>
-    <title>Job Search</title>
+    <title>University Search</title>
 </head>
 
 <body>
 
-    <h1>Job Search</h1>
+    <h1>University Search</h1>
     <p>This is a paragraph.</p>
+
+
+    <ul>
+
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="aboutus.html">About Us</a>
+        </li>
+        <li>
+            <a href="jobsearch.html">Job Search</a>
+        </li>
+        <li>
+            <a href="contactus.html">Contact Us</a>
+        </li>
+    </ul>
 
 </body>
