--- a/WEB-CW/pages/contactus.html
+++ b/WEB-CW/pages/contactus.html
@@ -10,4 +10,21 @@
     <h1>Contact Us</h1>
     <p>This is a paragraph.</p>
 
+    <ul>
+
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="aboutus.html">About Us</a>
+        </li>
+        <li>
+            <a href="jobsearch.html">Job Search</a>
+        </li>
+        <li>
+            <a href="unisearch.html">University Search</a>
+        </li>
+        
+    </ul>
+
 </body>
