--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -8,6 +8,25 @@
 <body>
 
     <h1>Job Search</h1>
-    <p>This is a paragraph.</p>
+
+
+    <ul>
+
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="aboutus.html">About Us</a>
+        </li>
+        <li>
+            <a href="unisearch.html">University Search</a>
+        </li>
+        <li>
+            <a href="contactus.html">Contact Us</a>
+        </li>
+    </ul>
+
+   
+
 
 </body>
