--- a/WEB-CW/pages/aboutus.html
+++ b/WEB-CW/pages/aboutus.html
@@ -26,4 +26,30 @@
         </li>
     </ul>
 
+    <div class="aboutus_paragraph_1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
+            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
+            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
+            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
+            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
+            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
+            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
+            mollis viverra est, id euismod arcu iaculis a.</p>
+    </div>
+
+    <div class="aboutus_image_1">
+        <img src="Images/image.png" alt="Image for home screen">
+    </div>
+
+    <div class="aboutus_paragraph_2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
+            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
+            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
+            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
+            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
+            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
+            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
+            mollis viverra est, id euismod arcu iaculis a.</p>
+    </div>
+
 </body>
