--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Job Search</title>
+    <script src="../JS/jobsearch.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -26,7 +28,15 @@
         </li>
     </ul>
 
-   
 
+    <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
+    <button onclick="searchTxt()">Search</button>
+    <br>
+    <br>
 
+    <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+
+    <section id="graphArea">
+
+    </section>
 </body>
