job search now displays data for that soc

--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -30,13 +30,41 @@
 
 
     <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
-    <button onclick="searchTxt()">Search</button>
+    <button onclick="GetDataButton()">Display Data</button>
+
+
     <br>
     <br>
 
-    <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+    <p>Job Name:
+        <a id="jobName"></a>
+    </p>
 
-    <section id="graphArea">
+    <p>SOC: 
+        <a id="SOC"></a>
+    </p>
+
+    <p>Title: 
+        <a id="title"></a>
+    </p>
+
+    <p>Description: 
+        <a id="desc"></a>
+    </p>
+
+    <p>Qualifications: 
+        <a id="qualifications"></a>
+    </p>
+
+    <p>Tasks
+        <a id="tasks"></a>
+    </p>
+
+    <p>Weekly Pay For in Scotland
+        <a id="pay"></a>
+    </p>
+
+
 
     </section>
 </body>
