displaying first 10, and displaying singular job

--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -28,41 +28,100 @@
         </li>
     </ul>
 
+    <section id="firstTenResults">
+        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
+        <button onclick="firstTenResults()">Display Results</button>
 
-    <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
-    <button onclick="GetDataButton()">Display Data</button>
+
+        <br>
+        <br>
+
+        <p id="result">First 10 Results
+        <p>
+            <a id="Job1SOC"></a> <br>
+            <a id="Job1Title"></a><br>
+
+            <br>
+
+            <a id="Job2SOC"></a> <br>
+            <a id="Job2Title"></a><br>
+
+            <br>
+
+            <a id="Job3SOC"></a> <br>
+            <a id="Job3Title"></a><br>
+
+            <br>
+
+            <a id="Job4SOC"></a> <br>
+            <a id="Job4Title"></a><br>
+
+            <br>
+
+            <a id="Job5SOC"></a> <br>
+            <a id="Job5Title"></a><br>
+
+            <br>
+
+            <a id="Job6SOC"></a> <br>
+            <a id="Job6Title"></a><br>
+
+            <br>
+
+            <a id="Job7SOC"></a> <br>
+            <a id="Job7Title"></a><br>
+
+            <br>
+
+            <a id="Job8SOC"></a> <br>
+            <a id="Job8Title"></a><br>
+
+            <br>
+
+            <a id="Job9SOC"></a> <br>
+            <a id="Job9Title"></a><br>
+
+            <br>
+
+            <a id="Job10SOC"></a> <br>
+            <a id="Job10Title"></a><br>
 
 
-    <br>
-    <br>
+        </p>
 
-    <p>Job Name:
-        <a id="jobName"></a>
-    </p>
+        </p>
 
-    <p>SOC: 
-        <a id="SOC"></a>
-    </p>
+    </section>
 
-    <p>Title: 
-        <a id="title"></a>
-    </p>
 
-    <p>Description: 
-        <a id="desc"></a>
-    </p>
+    <section id="searchedJob">
 
-    <p>Qualifications: 
-        <a id="qualifications"></a>
-    </p>
+        <input name="searchSOC" type="text" maxlength="512" id="searchSOC" class="searchField" />
+        <button onclick="searchSOC()">Display SOC Details</button>
 
-    <p>Tasks
-        <a id="tasks"></a>
-    </p>
+        <p>SOC:
+            <a id="SOC"></a>
+        </p>
 
-    <p>Weekly Pay For in Scotland
-        <a id="pay"></a>
-    </p>
+        <p>Title:
+            <a id="title"></a>
+        </p>
+
+        <p>Description:
+            <a id="desc"></a>
+        </p>
+
+        <p>Qualifications:
+            <a id="qualifications"></a>
+        </p>
+
+        <p>Tasks:
+            <a id="tasks"></a>
+        </p>
+
+        <p>Weekly Pay For in Scotland
+            <a id="pay"></a>
+        </p>
 
 
 
