lists all universitites and websites for those unis

--- a/WEB-CW/pages/unisearch.html
+++ b/WEB-CW/pages/unisearch.html
@@ -35,12 +35,10 @@
 
         <button id="searchBtn">Display Results</button>
 
+        <h3 id="uniTitle">List of all universities in the UK</h3>
 
-<div id="displayUni">
-    
+        <div id="log"></div>
 
-
-</div>
 
 
 
