--- a/WEB-CW/pages/contactus.html
+++ b/WEB-CW/pages/contactus.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>Contact Us</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="../CSS/contactus.css">
 </head>
 
@@ -28,15 +30,15 @@
     </ul>
 
     <section class="contentArea">
-
+        <h3>Contact Form</h3>
         <form id="contactForm" action="../PHP/contactus.php" method="post">
-            <label for="name" class="textLabel">Enter your name:</label>
+            <label for="name" class="textLabel">Enter Your Name:</label>
             <input type="text" name="name" id="name" required />
 
-            <label for="email" class="textLabel">Enter Your email:</label>
+            <label for="email" class="textLabel">Enter Your Email:</label>
             <input type="email" name="email" id="email" required />
 
-            <label for="message" class="textLabel">Enter your message:</label>
+            <label for="message" class="textLabel">Enter Your Message:</label>
             <textarea id="message" name="message" placeholder="Write your message." style="height:200px"></textarea>
 
 
