--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Job Search</title>
+    <meta charset="utf-8"/>
     <script src="../JS/lib/jquery.js"></script>
     <script src="../JS/lib/canvasjs.min.js"></script>
     <script src="../JS/jobsearch.js"></script>
@@ -37,7 +38,7 @@
         <br>
         <br>
 
-        <p id="result">First 10 Results
+        <h3>First 10 Results</h3>
         <p>
             <a id="Job1SOC"></a> <br>
             <a id="Job1Title"></a><br>
@@ -87,8 +88,6 @@
             <a id="Job10SOC"></a> <br>
             <a id="Job10Title"></a><br>
 
-
-        </p>
 
         </p>
 
