--- a/WEB-CW/pages/unisearch.html
+++ b/WEB-CW/pages/unisearch.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>University Search</title>
+    <meta charset="utf-8"/>
     <script src="../JS/lib/jquery.js"></script>
     <script src="../JS/lib/canvasjs.min.js"></script>
     <script src="../JS/unisearch.js"></script>
@@ -30,16 +31,39 @@
         </li>
     </ul>
 
+    <section id="fundingInfo">
+        <h3 id="fundingTitle">Funding Information</h3>
+
+        <div id="scholarshiphub">
+            <a href="https://www.thescholarshiphub.org.uk/">The Scholarship Hub</a>
+            <p>The Scholarship Hub was launched in early 2013 and is a social enterprise, which means we are committed
+                to reinvesting at least 50% of any profits back in to developing new scholarships. The Scholarship Hub
+                has been developed by</p>
+            <p>Search and apply for UK scholarships, grants or bursaries for university on our comprehensive database of
+                funding for UK/EU undergraduates and postgraduates and reduce your student debts.</p>
+        </div>
+
+        <div id="govUK">
+            <a href="https://www.gov.uk/browse/education/student-finance">GOV.UK - Student Finance</a>
+            <p>Includes information regarding loans, bursaries, grants, student finance, and paying back loans.</p>
+        </div>
+
+        <div id="turn2us">
+            <a href="https://www.turn2us.org.uk/">Turn2Us</a>
+            <p>Turn2us is a national charity providing practical help to people who are struggling financially.</p>
+        </div>
+
+    </section>
+
 
     <section id="ListUniversities">
 
         <button id="searchBtn">Display Results</button>
 
-        <h3 id="uniTitle">List of all universities in the UK</h3>
+        <h3 id="uniTitle">List of Universities in the UK</h3>
 
         <div id="log"></div>
 
-
-
+    </section>
 
 </body>
