added images and info regarding the site

--- a/WEB-CW/pages/aboutus.html
+++ b/WEB-CW/pages/aboutus.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>About Us</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 </head>
 
 <body>
 
     <h1>About Us</h1>
-    <p>This is a paragraph.</p>
+    <p id="info">Here is some brief information about the website.</p>
 
     <ul>
 
@@ -27,30 +27,24 @@
         </li>
     </ul>
 
-    <div class="aboutus_paragraph_1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
-            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
-            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
-            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
-            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
-            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
-            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
-            mollis viverra est, id euismod arcu iaculis a.</p>
+    <div class="jobsearch">
+        <p>The job search function will work by entering a key word such as 'developer' or 'artist' into the input box
+            and clicking on 'Display Results'. The site will then display 10 results that closely match what you
+            entered. Using those results you will be able to get a SOC code for a specific job. With this SOC code, you
+            scroll down to the next input box and enter the code here and proceed to click 'Display SOC Details'. This
+            will display the relevant information about this specific job, which will then reveal another box to display
+            a graph. This graph will have the average weekly pay for that job</p>
     </div>
 
-    <div class="aboutus_image_1">
-        <img src="Images/image.png" alt="Image for home screen">
+    <div class="aboutus_image">
+        <img src="../Images/govuk.png" alt="GOV UK Logo">
     </div>
 
-    <div class="aboutus_paragraph_2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
-            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
-            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
-            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
-            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
-            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
-            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
-            mollis viverra est, id euismod arcu iaculis a.</p>
+    <div class="unisearch">
+        <p>This section will contain information regarding funding for university within the UK. The three sites linked
+            are 'The Scholarship Hub', 'GOV UK - Student Finance', and 'Turn2Us'. There will be a singular button called
+            'Display Universities'. This will proceed to list every university in alphabetical order with the url
+            associated with that unviersity.</p>
     </div>
 
 </body>
