--- a/WEB-CW/pages/index.html
+++ b/WEB-CW/pages/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <title>Home</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 </head>
 
 <body>
 
     <h1>Home</h1>
-    <p>This is a paragraph.</p>
 
     <ul>
 
@@ -28,29 +27,18 @@
     </ul>
 
     <div class="home_paragraph_1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
-            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
-            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
-            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
-            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
-            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
-            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
-            mollis viverra est, id euismod arcu iaculis a.</p>
+        <p>Hi and welcome to the Job & Education Website. Here you will be able to look for information regarding
+            certain jobs in 'Job Search', or find information regarding universities and funding for those universities
+            in 'University Search'</p>
     </div>
 
     <div class="home_image_1">
-        <img src="Images/image.png" alt="Image for home screen">
+        <img src="../Images/education.jpg" alt="Image for homescreen">
     </div>
 
     <div class="home_paragraph_2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean est mi, egestas eget leo id, bibendum aliquam
-            nunc. Sed vel orci vel nisi iaculis dapibus. Praesent porta ac urna eget tristique. Donec est mauris,
-            consequat ut pulvinar a, rhoncus et diam. Sed ac luctus enim. Morbi vitae molestie mi, nec euismod ligula.
-            Nunc sed dictum diam. Nunc est turpis, pellentesque eget urna sed, imperdiet tempus libero. Nullam vitae mi
-            volutpat, sagittis nisi ut, pellentesque arcu. Sed elit nibh, facilisis cursus sagittis vitae, aliquam a
-            justo. Nam a mattis sapien. Pellentesque consectetur vel tellus imperdiet sodales. Nam vel quam
-            sollicitudin, dictum mauris auctor, gravida est. Donec porta tristique odio, id efficitur magna. Aenean
-            mollis viverra est, id euismod arcu iaculis a.</p>
+        <p>You can also contact us in 'Contact Us', we aim to reply within 3-5 working days. If you would like further
+            information regarding our services please go to 'About Us'</p>
     </div>
 
 </body>
