--- a/WEB-CW/pages/unisearch.html
+++ b/WEB-CW/pages/unisearch.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>University Search</h1>
-    <p>This is a paragraph.</p>
+    
 
 
     <ul>
@@ -58,7 +58,7 @@
 
     <section id="ListUniversities">
 
-        <button id="searchBtn">Display Results</button>
+        <button id="searchBtn">Display Universities</button>
 
         <h3 id="uniTitle">List of Universities in the UK</h3>
 
