changed html around and added css
i think im done?

--- a/WEB-CW/pages/aboutus.html
+++ b/WEB-CW/pages/aboutus.html
@@ -4,12 +4,12 @@
 <head>
     <title>About Us</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../CSS/aboutus.css">
 </head>
 
 <body>
 
-    <h1>About Us</h1>
-    <p id="info">Here is some brief information about the website.</p>
+    
 
     <ul>
 
@@ -27,24 +27,35 @@
         </li>
     </ul>
 
-    <div class="jobsearch">
-        <p>The job search function will work by entering a key word such as 'developer' or 'artist' into the input box
-            and clicking on 'Display Results'. The site will then display 10 results that closely match what you
-            entered. Using those results you will be able to get a SOC code for a specific job. With this SOC code, you
-            scroll down to the next input box and enter the code here and proceed to click 'Display SOC Details'. This
-            will display the relevant information about this specific job, which will then reveal another box to display
-            a graph. This graph will have the average weekly pay for that job</p>
-    </div>
+    <h2>About Us</h2>
 
-    <div class="aboutus_image">
-        <img src="../Images/govuk.png" alt="GOV UK Logo">
-    </div>
+    <p id="jobsearch">The job search function will work by entering a key word such as 'developer' or 'artist' into the
+        input box
+        and clicking on 'Display Results'. The site will then display 10 results that closely match what you
+        entered. Using those results you will be able to get a SOC code for a specific job. With this SOC code, you
+        scroll down to the next input box and enter the code here and proceed to click 'Display SOC Details'. This
+        will display the relevant information about this specific job, which will then reveal another box to display
+        a graph. This graph will have the average weekly pay for that job</p>
 
-    <div class="unisearch">
-        <p>This section will contain information regarding funding for university within the UK. The three sites linked
-            are 'The Scholarship Hub', 'GOV UK - Student Finance', and 'Turn2Us'. There will be a singular button called
-            'Display Universities'. This will proceed to list every university in alphabetical order with the url
-            associated with that unviersity.</p>
-    </div>
 
+
+
+
+
+    <p id="unisearch">This section will contain information regarding funding for university within the UK. The three
+        sites linked
+        are 'The Scholarship Hub', 'GOV UK - Student Finance', and 'Turn2Us'. There will be a singular button called
+        'Display Universities'. This will proceed to list every university in alphabetical order with the url
+        associated with that unviersity.<br> <br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet, eros ac faucibus tincidunt, felis
+        erat pellentesque mi, sed cursus sapien nibh ac orci. Aliquam id sodales mi. Proin ut mauris elementum,
+        consequat velit at, rhoncus orci. Praesent quis lacinia urna, quis auctor arcu. Donec ultricies rhoncus
+        vehicula. In at metus imperdiet, vestibulum elit in, dignissim nulla. Nunc id purus ligula. Ut porta libero
+        eget mauris dictum, a maximus eros placerat. Vestibulum ac eros semper, lobortis massa volutpat, ullamcorper
+        mauris. Curabitur quam ante, tincidunt et porta non, ultricies vitae orci.</p>
+
+    <img src="../Images/govuk.png" alt="GOV UK Logo">
+    <div class="footer">
+        <p>Zubair Khalid</p>
+    </div>
 </body>
