--- a/WEB-CW/pages/index.html
+++ b/WEB-CW/pages/index.html
@@ -9,7 +9,8 @@
 
 <body>
 
-    <h1>Home</h1>
+    
+    <section id="homesection"></section>
 
     <ul>
 
@@ -27,19 +28,44 @@
         </li>
     </ul>
 
-    <div class="home_paragraph_1">
-        <p>Hi and welcome to the Job & Education Website. Here you will be able to look for information regarding
-            certain jobs in 'Job Search', or find information regarding universities and funding for those universities
-            in 'University Search'</p>
-    </div>
+    <h2>Home</h2>
+    <div class="container">
 
-    <div class="home_image_1">
+
+        <p id="home_paragraph_1">Hi and welcome to the Job & Education Website. Here you will be able to look for
+            information regarding
+            certain jobs in 'Job Search', or find information regarding universities and funding for those
+            universities
+            in 'University Search' <br> <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet, eros ac faucibus tincidunt, felis
+            erat pellentesque mi, sed cursus sapien nibh ac orci. Aliquam id sodales mi. Proin ut mauris elementum,
+            consequat velit at, rhoncus orci. Praesent quis lacinia urna, quis auctor arcu. Donec ultricies rhoncus
+            vehicula. In at metus imperdiet, vestibulum elit in, dignissim nulla. Nunc id purus ligula. Ut porta libero
+            eget mauris dictum, a maximus eros placerat. Vestibulum ac eros semper, lobortis massa volutpat, ullamcorper
+            mauris. Curabitur quam ante, tincidunt et porta non, ultricies vitae orci.</p>
+
+
+
+        <p id="home_paragraph_2">You can also contact us in 'Contact Us', we aim to reply within 3-5 working days. If
+            you would like
+            further
+            information regarding our services please go to 'About Us' <br> <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet, eros ac faucibus tincidunt, felis
+            erat pellentesque mi, sed cursus sapien nibh ac orci. Aliquam id sodales mi. Proin ut mauris elementum,
+            consequat velit at, rhoncus orci. Praesent quis lacinia urna, quis auctor arcu. Donec ultricies rhoncus
+            vehicula. In at metus imperdiet, vestibulum elit in, dignissim nulla. Nunc id purus ligula. Ut porta libero
+            eget mauris dictum, a maximus eros placerat. Vestibulum ac eros semper, lobortis massa volutpat, ullamcorper
+            mauris. Curabitur quam ante, tincidunt et porta non, ultricies vitae orci.</p>
+
+
         <img src="../Images/education.jpg" alt="Image for homescreen">
     </div>
 
-    <div class="home_paragraph_2">
-        <p>You can also contact us in 'Contact Us', we aim to reply within 3-5 working days. If you would like further
-            information regarding our services please go to 'About Us'</p>
-    </div>
 
+
+
+
+    <div class="footer">
+        <p>Zubair Khalid</p>
+    </div>
 </body>
