--- a/WEB-CW/pages/jobsearch.html
+++ b/WEB-CW/pages/jobsearch.html
@@ -1,132 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<div lang="en">
 
-<head>
-    <title>Job Search</title>
-    <meta charset="utf-8"/>
-    <script src="../JS/lib/jquery.js"></script>
-    <script src="../JS/lib/canvasjs.min.js"></script>
-    <script src="../JS/jobsearch.js"></script>
-</head>
+    <head>
+        <title>Job Search</title>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="../CSS/jobsearch.css">
+        <script src="../JS/lib/jquery.js"></script>
+        <script src="../JS/lib/canvasjs.min.js"></script>
+        <script src="../JS/jobsearch.js"></script>
+    </head>
 
-<body>
-
-    <h1>Job Search</h1>
-    <p>This is where you search for jobs.</p>
-
-    <ul>
-
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="aboutus.html">About Us</a>
-        </li>
-        <li>
-            <a href="unisearch.html">University Search</a>
-        </li>
-        <li>
-            <a href="contactus.html">Contact Us</a>
-        </li>
-    </ul>
-
-    <section id="firstTenResults">
-        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
-        <button id="searchBtn">Display Results</button>
+    <body>
 
 
-        <br>
-        <br>
 
-        <h3>First 10 Results</h3>
-        <p>
-            <a id="Job1SOC"></a> <br>
-            <a id="Job1Title"></a><br>
 
+        <ul>
+
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="aboutus.html">About Us</a>
+            </li>
+            <li>
+                <a href="unisearch.html">University Search</a>
+            </li>
+            <li>
+                <a href="contactus.html">Contact Us</a>
+            </li>
+        </ul>
+
+        <h2>Job Search</h2>
+
+        <section id="firstTenResults">
+
+            <div class="contentArea">
+                <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" />
+                <br>
+                <button id="searchBtn">Display Results (click twice)</button>
+
+            </div>
+            <br>
             <br>
 
-            <a id="Job2SOC"></a> <br>
-            <a id="Job2Title"></a><br>
+            <h3>First 10 Results</h3>
+            <p id="alljobs">
+                <a id="Job1SOC"></a> <br>
+                <a id="Job1Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job3SOC"></a> <br>
-            <a id="Job3Title"></a><br>
+                <a id="Job2SOC"></a> <br>
+                <a id="Job2Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job4SOC"></a> <br>
-            <a id="Job4Title"></a><br>
+                <a id="Job3SOC"></a> <br>
+                <a id="Job3Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job5SOC"></a> <br>
-            <a id="Job5Title"></a><br>
+                <a id="Job4SOC"></a> <br>
+                <a id="Job4Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job6SOC"></a> <br>
-            <a id="Job6Title"></a><br>
+                <a id="Job5SOC"></a> <br>
+                <a id="Job5Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job7SOC"></a> <br>
-            <a id="Job7Title"></a><br>
+                <a id="Job6SOC"></a> <br>
+                <a id="Job6Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job8SOC"></a> <br>
-            <a id="Job8Title"></a><br>
+                <a id="Job7SOC"></a> <br>
+                <a id="Job7Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job9SOC"></a> <br>
-            <a id="Job9Title"></a><br>
+                <a id="Job8SOC"></a> <br>
+                <a id="Job8Title"></a><br>
 
-            <br>
+                <br>
 
-            <a id="Job10SOC"></a> <br>
-            <a id="Job10Title"></a><br>
+                <a id="Job9SOC"></a> <br>
+                <a id="Job9Title"></a><br>
+
+                <br>
+
+                <a id="Job10SOC"></a> <br>
+                <a id="Job10Title"></a><br>
 
 
-        </p>
+            </p>
 
-    </section>
+        </section>
 
 
-    <section id="searchedJob">
+        <section id="searchedJob">
+            <div class="contentArea">
+                <input name="searchSOC" type="text" maxlength="512" id="searchSOC" class="searchField" />
+                <br>
+                <button id="searchSOCBtn">Display SOC Details (click twice)</button>
+            </div>
+            <div id="alljobs">
+                <p>SOC:
+                    <a id="SOC"></a>
+                </p>
 
-        <input name="searchSOC" type="text" maxlength="512" id="searchSOC" class="searchField" />
-        <button id="searchSOCBtn">Display SOC Details</button>
+                <p>Title:
+                    <a id="title"></a>
+                </p>
 
-        <p>SOC:
-            <a id="SOC"></a>
-        </p>
+                <p>Description:
+                    <a id="desc"></a>
+                </p>
 
-        <p>Title:
-            <a id="title"></a>
-        </p>
+                <p>Qualifications:
+                    <a id="qualifications"></a>
+                </p>
 
-        <p>Description:
-            <a id="desc"></a>
-        </p>
+                <p>Tasks:
+                    <a id="tasks"></a>
+                </p>
 
-        <p>Qualifications:
-            <a id="qualifications"></a>
-        </p>
+            </div>
 
-        <p>Tasks:
-            <a id="tasks"></a>
-        </p>
 
-        <p>
+            <p>
             <div id="chartContainer"></div>
-                
-        </p>
+            </p>
 
+            </p>
 
-        <button id="showChart">Show Chart</button>
+            <div class="contentArea">
+                <button id="showChart">Show Chart</button>
 
+            </div>
+        </section>
 
-    </section>
-</body>
+        
+    </body>
